# INE5430_IA

./: .gitignore  P1_Resumo.txt  README.md
EP1/: README.md  makefile  pyproject.toml
EP1/miner/: app.py  example.map
EP1/miner/agents/: LDS.py  informed_agent.py  robot.py  uninformed_agent.py
EP1/miner/model/: algorithms.py  mine_state.py  world.py
EP1/miner/utils/: actions.py  debug.py  enums.py
EP1/tests/: example.map  impossible.map  mini.map  othertest.map  test_informed.py  test_mine_state.py  test_miner.py  test_robot.py  test_uninformed.py  test_world.py
EP4/: _project.xml  readme.txt
EP4/Logica_Fuzzy_Diogo_Jacyara/: _classpath.xml  truck.fcl
EP4/Logica_Fuzzy_Diogo_Jacyara/src/remoteDriver/: _project.xml
EP4/src/remoteDriver/: LoadFuzzySets.java  RemoteDriver.java
EP5/: PrepData.m  importfile.m  neural_network.py  pyproject.toml
WP1/: eightpuzzle.py
neural/: README.md  convert_img.py  fashion.py  pyproject.toml
