[tool.poetry]
name = "miner"
version = "0.1.0"
description = ""
authors = ["Diogo Junior <diogo.junior@grad.ufs.br>"]

[tool.poetry.dependencies]
python = "^3.7"
autopep8 = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
