[tool.poetry]
name = "neural"
version = "0.1.0"
description = ""
authors = ["Diogo Junior <diogo.junior@grad.ufsc.br>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.16"
pandas = "^0.24.2"
scikit-learn = "^0.21.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
